--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "eslint": "^8.25.0"
+    "eslint": "^8.25.0",
+    "axios": "^1.0.0",
+    "react-router-dom": "^6.4.1",
+    "redux": "^4.2.0",
+    "react-redux": "^8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
